--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,15 @@
   		<artifactId>hamcrest-all</artifactId>
   		<version>1.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.jackson</groupId>
+  		<artifactId>jackson-core-asl</artifactId>
+  		<version>1.9.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.codehaus.jackson</groupId>
+  		<artifactId>jackson-mapper-asl</artifactId>
+  		<version>1.9.6</version>
+  	</dependency>
   </dependencies>
 </project>
